         unsetDatabase on objects that become transient (including those removes).
         setDatabase is still not called on any object.

JDO:     Fixed SQLTypes to pick up proper SQL type form field of type java.util.Date.
         Fixed SQLEngine to use SQL type in some calls to setObject.
         (Contributed by Donald Ball <balld@webslingerz.com>)

Mapping: Added resetValue() method to field handler. This generally resets a field to
         it's default value or empties a collection field.

Mapping: Date type no longer defaults to new date() when field is null, field is no
         longer set to default when null. (Reported by Lincoln Spiteri
         <Lincoln.Spiteri@mobisle.com>)

Mapping: Fixed mapping loader to complain if get/set methods are not found. Both are
         required to be present, unless a collection field is used which only requires
         a get method. (Reported by Lincoln Spiteri <Lincoln.Spiteri@mobisle.com>)

Mapping: Added convertor between String and character. (Reported by Donald Ball
         <balld@webslingerz.com>)


Version 0.8.5  May 12, 2000
---------------------------

JDO:     Remove enumerate collection type. Only get method is required to support
         java.util collections, get/set methods to support arrays. Extended the
         CollectionHandler interface with size() method to assist in validation.

JDO:     Revised the CacheEngine towards dependency support, adding FIFO list to
         determine order of object removal, simplifying the prepare stage. Objects
         will now be removed from the database in the same order they were removed
         by calling Database.remove().

JDO:     Fixes to outer query expressions:
         - JDBCQueryExpression fixed and tested with Access (Christopher
           Elkins <celkins@scardini.com>)
         - OracleQueryExpression fixed not tested with Oracle
           (Sebastien Sahuc <ssahuc@imediation.com>)
