@@ -1,0 +1,15 @@
+<categories>
+  <category id="1">
+    <short>First</short>
+    <description>Category no. 1</description>
+  </category>
+  <category id="2">
+    <short>First</short>
+    <description>Category no. 1</description>
+  </category>
+  <category id="3">
+    <short>First</short>
+    <description>Category no. 1</description>
+  </category>
+</categories>
+
