@@ -1,0 +1,23 @@
+package xml;
+
+
+public class Bar
+{
+
+
+    private String  _baz;
+
+
+    public String getBaz()
+    {
+        return _baz;
+    }
+
+
+    public void setBaz( String baz )
+    {
+        _baz = baz;
+    }
+
+
+}
